{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Combat",
            "id": "67efe671-1dc9-4203-858f-18c12c2fb2e7",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "82d60889-3163-45e1-8992-517b99234ac2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc164b1a-10e4-445a-bc57-bf9d3743d7e9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}